--- a/analyses/cluster-cell-calling/02-create-gene-activity-matrix.Rmd
+++ b/analyses/cluster-cell-calling/02-create-gene-activity-matrix.Rmd
@@ -38,6 +38,7 @@ params:
   resolution: '.'
   assay: '.'
   min.cutoff_value: '.'
+  compute_gene_activities_manual: '.'
   root_dir: './'
   PROJECT_NAME: '.'
   PI_NAME: '.'
@@ -204,14 +205,18 @@ This gene activity matrix can then be:
    - Integrated with scRNA-seq data (multi-omics workflows)
    - Visualized to infer regulatory activity
 
-## Manual Generation of Gene Activity Matrix
+Here, the user can select to implement the following strategies to generate the Gene Activity Matrix.
 
-Here, we chose not to use `GeneActivity()` because it makes several assumptions that may not align with our specific analysis requirements. For example, `GeneActivity()`:
+### Automated Generation of Gene Activity Matrix
+
+The `GeneActivity()` function is automated and convenient for quick analyses:
 
 - Uses a default promoter window (typically ±2 kb around the TSS) for peak-to-gene mapping
-- Relies on a fixed reference genome and gene annotation, which may not match the custom annotations we're using (e.g., from Ensembl or GENCODE)
+- Relies on a fixed reference genome and gene annotation, which may not match the custom annotations used (e.g., from Ensembl or GENCODE).
 
-While `GeneActivity()` is automated and convenient for quick analyses, it offers limited flexibility. In contrast, our manual approach allows for:
+### Manual Generation of Gene Activity Matrix
+
+We created a manual approach that allows for: 
 
 - Fine-grained control over how peaks are mapped to genes (e.g., including full gene bodies, adjusting overlap criteria)
 - Explicit harmonization between the peak matrix and genome annotations, ensuring all data layers are correctly aligned
@@ -219,81 +224,80 @@ While `GeneActivity()` is automated and convenient for quick analyses, it offers
 
 By manually building the gene activity matrix, we ensure that every step is fully auditable and tailored to our dataset, which would not be possible with the default behavior of `GeneActivity()`.
 
+
 ```{r compute-gene-activities-manual, echo=TRUE}
-###----------- let's debug ---------------------------------
-# Step 1: Use peaks from the count matrix (ensures matching order)
-# Here we ensure exact alignment with the Seurat object. GeneActivity() internally recomputes peak mappings, which might not exactly match your filtered or preprocessed peak set.
-peak_names <- rownames(seurat_obj[["peaks"]])
-peaks_gr <- StringToGRanges(peak_names, sep = c("-", "-"))
+# Indicates whether or not to use miQC
+if (compute_gene_activities_manual == "YES"){
+  print("We will compute the gene activities matrix manually.")
+  
+  ###----------- let's debug ---------------------------------
+  # Step 1: Use peaks from the count matrix (ensures matching order)
+  # Here we ensure exact alignment with the Seurat object. GeneActivity() internally recomputes peak mappings, which might not exactly match your filtered or preprocessed peak set.
+  peak_names <- rownames(seurat_obj[["peaks"]])
+  peaks_gr <- StringToGRanges(peak_names, sep = c("-", "-"))
 
-# Step 2: Get the gene annotations
-anno <- Annotation(seurat_obj)
+  # Step 2: Get the gene annotations
+  anno <- Annotation(seurat_obj)
 
-# Step 3: Harmonize chromosomes (seqlevels) between peaks and annotations
-# Manual quality control and harmonization.
-# We’re manually aligning seqlevels (chromosome naming conventions) between peaks and annotations, which GeneActivity() doesn’t expose directly.
-# This avoids mismatches that can silently reduce our peak-to-gene overlap set.
-common_seqlevels <- intersect(seqlevels(peaks_gr), seqlevels(anno))
-peaks_gr <- keepSeqlevels(peaks_gr, common_seqlevels, pruning.mode = "coarse")
-anno <- keepSeqlevels(anno, common_seqlevels, pruning.mode = "coarse")
+  # Step 3: Harmonize chromosomes (seqlevels) between peaks and annotations
+  # Manual quality control and harmonization.
+  # We’re manually aligning seqlevels (chromosome naming conventions) between peaks and annotations, which GeneActivity() doesn’t expose directly.
+  # This avoids mismatches that can silently reduce our peak-to-gene overlap set.
+  common_seqlevels <- intersect(seqlevels(peaks_gr), seqlevels(anno))
+  peaks_gr <- keepSeqlevels(peaks_gr, common_seqlevels, pruning.mode = "coarse")
+  anno <- keepSeqlevels(anno, common_seqlevels, pruning.mode = "coarse")
 
-# Step 4: Subset peak count matrix to peaks in filtered peaks_gr
-# Convert back GRanges to strings
-filtered_peak_names <- paste0(seqnames(peaks_gr), "-", start(peaks_gr), "-", end(peaks_gr))
+  # Step 4: Subset peak count matrix to peaks in filtered peaks_gr
+  # Convert back GRanges to strings
+  filtered_peak_names <- paste0(seqnames(peaks_gr), "-", start(peaks_gr), "-", end(peaks_gr))
 
-# Subset counts matrix to matching rows
-counts <- GetAssayData(seurat_obj, assay = "peaks", layer = "counts")
-counts <- counts[filtered_peak_names, ]
+  # Subset counts matrix to matching rows
+  counts <- GetAssayData(seurat_obj, assay = "peaks", layer = "counts")
+  counts <- counts[filtered_peak_names, ]
 
-# Confirm match
-stopifnot(nrow(counts) == length(peaks_gr))
+  # Confirm match
+  stopifnot(nrow(counts) == length(peaks_gr))
 
-# Step 5: Find overlaps
-# You're explicitly overlapping our own GRanges of peaks with our own gene annotations.
-# GeneActivity() uses a fixed logic — usually overlapping peaks with promoters only, defined as ±2kb around the TSS by default.
-# User might be using full gene bodies or custom promoter definitions.
-overlaps <- findOverlaps(peaks_gr, anno)
+  # Step 5: Find overlaps
+  # You're explicitly overlapping our own GRanges of peaks with our own gene annotations.
+  # GeneActivity() uses a fixed logic — usually overlapping peaks with promoters only, defined as ±2kb around the TSS by default.
+  # User might be using full gene bodies or custom promoter definitions.
+  overlaps <- findOverlaps(peaks_gr, anno)
 
-# Step 6: Peak-to-gene mapping
-peak2gene <- sparseMatrix(
-  i = queryHits(overlaps),
-  j = subjectHits(overlaps),
-  dims = c(length(peaks_gr), length(anno))
-)
+  # Step 6: Peak-to-gene mapping
+  peak2gene <- sparseMatrix(i = queryHits(overlaps),j = subjectHits(overlaps), dims = c(length(peaks_gr), length(anno)))
 
-# Step 7: Multiply to get gene-by-cell activity matrix
-gene_activity_counts <- t(peak2gene) %*% counts
+  # Step 7: Multiply to get gene-by-cell activity matrix
+  gene_activity_counts <- t(peak2gene) %*% counts
 
-# Step 8: Clean and assign gene names
-gene_names <- as.character(anno$gene_name)
-gene_names[is.na(gene_names) | gene_names == ""] <- paste0("Gene_", seq_len(sum(is.na(gene_names) | gene_names == "")))
-gene_names <- make.unique(gene_names)
-rownames(gene_activity_counts) <- gene_names
-###--------------------------------------------
-```
+  # Step 8: Clean and assign gene names
+  gene_names <- as.character(anno$gene_name)
+  gene_names[is.na(gene_names) | gene_names == ""] <- paste0("Gene_", seq_len(sum(is.na(gene_names) | gene_names == "")))
+  gene_names <- make.unique(gene_names)
+  rownames(gene_activity_counts) <- gene_names
+  
+  # Optionally: add gene activity matrix as a new assay to your Seurat object
+  seurat_obj[["GeneActivity"]] <- CreateAssayObject(counts = gene_activity_counts)
+  ###--------------------------------------------
+  
+  } else {
+    print("We will compute the gene activities matrix by using the GeneActivity() function.")
+    
+    # compute gene.activities
+    # GeneActivity() assumes:
+    # - Default promoter size window
+    # - Fixed reference genome and gene annotation
+    # If the user is using custom annotations (e.g., from Ensembl or GENCODE) or need to ensure full reproducibility in a publication-quality workflow, the manual approach is safer.
+   gene.activities <- GeneActivity(seurat_obj)
 
-## Automated Generation of Gene Activity Matrix
-
-While the `GeneActivity()` function is available for this purpose, we are intentionally omitting its use in this section.
-
-```{r compute-add-gene-activities-automated, echo=TRUE}
-# compute gene.activities
-# GeneActivity() assumes:
-# - Default promoter size window
-# - Fixed reference genome and gene annotation
-# If the user is using custom annotations (e.g., from Ensembl or GENCODE) or need to ensure full reproducibility in a publication-quality workflow, the manual approach is safer.
-# gene.activities <- GeneActivity(seurat_obj)
-
-# Optionally: add gene activity matrix as a new assay to your Seurat object
-#seurat_obj[["GeneActivity"]] <- CreateAssayObject(counts = gene.activities)
+   # Optionally: add gene activity matrix as a new assay to your Seurat object
+   seurat_obj[["GeneActivity"]] <- CreateAssayObject(counts = gene.activities)
+}
 ```
 
 Now we can visualize the activities of canonical marker genes to help interpret our ATAC-seq clusters. Note that the activities will be much noisier than scRNA-seq measurements. This is because they represent measurements from sparse chromatin data, and because they assume a general correspondence between gene body/promoter accessibility and gene expression which may not always be the case. Nonetheless, we can begin to discern cell populations based on these gene activity profiles. 
 
-```{r add-gene-activities, echo=TRUE}
-# Optionally: add gene activity matrix as a new assay to your Seurat object
-seurat_obj[["GeneActivity"]] <- CreateAssayObject(counts = gene_activity_counts)
-
+```{r normalize-matrix, echo=TRUE}
 # Normalize the gene activity data (optional but common)
 seurat_obj <- NormalizeData(seurat_obj, 
                             assay = "GeneActivity",
